--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,19 @@
-[tool.poetry]
+[project]
 name = "dotpptx"
 version = "0.1.0"
-description = ""
-authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
+description = "dotpptx is a tool to convert PowerPoint files to XML and back."
+authors = [{ name = "Antonio Feregrino", email = "antonio.feregrino@gmail.com" }]
+readme = "readme.md"
 license = "MIT"
+requires-python = ">=3.10"
 
-[tool.poetry.scripts]
+dependencies = [
+    "click>=8.2.1",
+]
+
+[project.scripts]
 dotpptx = "dotpptx.__main__:cli"
 
-[tool.poetry.dependencies]
-python = "^3.8"
-click = "^8.1.6"
-
-
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["uv_build>=0.8.6,<0.9.0"]
+build-backend = "uv_build"
