--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,22 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pytest>=8.4.1",
+    "mypy>=1.10.0",
 ]
 
 [project.scripts]
 dotpptx = "dotpptx.__main__:cli"
+
+[tool.mypy]
+python_version = "3.10"
+packages = ["dotpptx"]
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+no_implicit_optional = true
+ignore_missing_imports = true
 
 [build-system]
 requires = ["uv_build>=0.8.6,<0.9.0"]
