--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ on:
     branches: [ main ]
 
 jobs:
-  mypy:
-    name: Type check
+  checks:
+    name: Checks
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -25,28 +25,11 @@ jobs:
       - name: Sync deps
         run: uv sync --dev
 
-      - name: Run mypy
-        run: uv run mypy
+      - name: Run linting
+        run: make lint
 
-  tests:
-    name: Tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Run unit tests
+        run: make unit
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v4
-
-      - name: Sync deps
-        run: uv sync --dev
-
-      - name: Run tests
-        run: uv run -q pytest -q
-
-
+      - name: Run e2e tests
+        run: make e2e
